--- a/Root Directory/Input.html
+++ b/Root Directory/Input.html
@@ -26,13 +26,13 @@
 
     <input type="hidden" name="access_key" value="c08cbba3-8b05-4a01-b889-d7e6e29308b4">
 
-    <label for="fname">Email of Sender (Leave Blank if not applicable) </label>
+    <label for="fname" style="color: white;">Email of Sender (Leave Blank if not applicable) </label>
     <input type="text" id="sname" name="email" placeholder="@gmail.com...">
 
-    <label for="lname">Phone Number of Sender (Leave Blank if not applicable) </label>
+    <label for="lname" style="color: white;">Phone Number of Sender (Leave Blank if not applicable) </label>
     <input type="text" id="dname" name="phonenumber" placeholder="(999)999-9999...">
 
-    <label for="state">U.S. State of Origin (If Applicable, otherwise "Not from USA")</label>
+    <label for="state" style="color: white;">U.S. State of Origin (If Applicable, otherwise "Not from USA")</label>
     <select id="state" name="state">
       <option value="utah">Utah</option>
       <option value="alabama">Alabama</option>
@@ -88,7 +88,7 @@
       <option value="not from the USA">Not From USA</option>
     </select>
 
-    <label for="subject">Message Content</label>
+    <label for="subject" style="color: white;">Message Content</label>
     <textarea id="subject" name="subject" placeholder="Content of the message you recieved (copy + paste).." style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
