--- a/Root Directory/Output.html
+++ b/Root Directory/Output.html
@@ -27,7 +27,7 @@
 
 </form>
 
-<p style= font-size: 5px; font-family: Times New Roman;> Andrew Barber, USU, TCR 2110, Fall 2024. </p>
+<p style= font-size: 5px; font-family: Times New Roman;> Andrew Barber, Elijah Paul Castaneda, Scott Jeppson, USU, Sandbox - Hackathon, Spring 2025. </p>
 
 <div class="navbar">
   <a href="index.htm"> Main Menu </a>
