--- a/Root Directory/index.html
+++ b/Root Directory/index.html
@@ -65,7 +65,7 @@
 
 <p style="text-align:center;"> We hope you found this resource helpful, and Happy Saint Patrick's Day! </p>
 
-<p style= font-size: 5px; font-family: Times New Roman;> Andrew Barber, Elijah Paul Castaneda, Scott Jeppson, USU, Sandbox - Hackathon, Spring 2025. </p>
+<p style="font-size: 5px; font-family: Times New Roman;"> Andrew Barber, Elijah Paul Castaneda, Scott Jeppson, USU, Sandbox - Hackathon, Spring 2025. </p>
 
 <div class="navbar a">
   <a href="Input.html"> Scam Detector </a>
