--- a/Root Directory/index.html
+++ b/Root Directory/index.html
@@ -37,7 +37,7 @@
   
   <div class="column">
     <h2>Elijah Paul Castaneda</h2>
-    <p>Elijah Paul Castaneda is an Information Systems major at Utah State University. His role in the Scam Detective Team was to analyze data, put together a pitch deck, and generally support the development of Scam Detective. </p>
+    <p>Elijah Paul Castaneda is a Data Analytics major at Utah State University. His role in the Scam Detective Team was to analyze data, put together a pitch deck, and generally support the development of Scam Detective. </p>
    <figure>
   <img src="./SD.Images/Elijah Paul Castaneda.jpg" alt="A picture of Elijah Paul Castaneda" width="300" height="300" class="center" style="width:80%;">
   <figcaption style="color: white";>Fig.3 - Elijah Paul Castaneda </figcaption>
